# python-practicum

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  main.py  pyproject.toml
.github/workflows/: ci.yml
app/: main.py
app/api/v1/: facts.py
app/core/: celery_app.py  config.py
app/db/: models.py  repository.py  session.py
app/schemas/: fact.py
app/services/: cache.py
app/tasks/: facts.py
tests/: conftest.py  test_api.py  test_cache.py  test_repository.py  test_worker.py
