[project]
name = "python-practicum"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.31.0",
    "celery>=5.6.3",
    "fastapi>=0.135.2",
    "httpx>=0.28.1",
    "prometheus-fastapi-instrumentator>=7.1.0",
    "pydantic-settings>=2.13.1",
    "redis>=7.4.0",
    "sqlalchemy>=2.0.48",
    "uvicorn>=0.42.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.8",
    "testcontainers>=4.14.2",
]

[tool.uv.scripts]
app = "uvicorn app.main:app --reload"
worker = "celery -A app.core.celery_app:celery_app worker"
beat = "celery -A app.core.celery_app:celery_app beat --loglevel=INFO"
tests = "pytest"
lint = "ruff check ."
